--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,12 @@ Jinja2==3.0.1
 MarkupSafe==2.0.1
 numpy==1.20.3
 opencv-python==4.5.2.54
+pandas==1.2.5
 psycopg2==2.9.1
+python-dateutil==2.8.1
 python-engineio==4.2.0
 python-socketio==5.3.0
+pytz==2021.1
+six==1.16.0
 SQLAlchemy==1.4.18
 Werkzeug==2.0.1
